@@ -175,6 +175,8 @@ b bugfix
 
 0.11.0  in progress
               + lmap/tensorpow
+              + lmap/real
+              + lmap/imag
               + gate/werner
               + gate/isotropic
               + gate/copydot
@@ -199,3 +201,5 @@ b bugfix
               * markov/bath class rewritten, now supports fermionic baths as well
               b markov/ops: warns of possible RWA violations
               + more test scripts
+              b seq/scrofulous now uses the phi parameter
+              * invariant/LU uses lmap/tensorpow
